[package]
name = "english-to-cron"
version = "0.1.0"
edition = "2021"
description = "converts natural language into cron expressions"
homepage = "https://docs.rs/english-to-cron"
documentation = "https://docs.rs/english-to-cron"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
repository = "https://github.com/kaplanelad/english-to-cron"


[dependencies]
regex = { version = "1.10.6", default-features = false, features = [
    "unicode-case",
] }
lazy_static = { version = "1.5.0", default-features = false }


[dev-dependencies]
rstest = "0.22.0"
